package structural.adapter;

/**
 * Interface esperada pelo cliente. Um barco de remo é remado para se mover.
 * @author <a href="mailto:jean.zanatta@unoesc.edu.br">Jean Luiz Zanatta</a>
 * @since 07/01/2022
 */
public interface BarcoDeRemo {

	void remar();
}
